tests/core/error/function-2.rq
# Use DISTINCT, disallowed in non-aggregate functions
SELECT (fn:upper-case (DISTINCT ?u) AS ?m) { }
